# abstract-terror-strike

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  ROADMAP  architecture.mdj  attributeColorFragment.glsl  attributeColorVertex.glsl  character.cpp  character.hpp  chest.blend  chest.blend1  chest.cpp  chest.hpp  chest.mtl  constants.hpp  direction.cpp  direction.hpp  game_manager.cpp  game_manager.h  gen_icons.cpp  gen_icons.h  ghost.cpp  ghost.h  glfwInitialization.cpp  glfwInitialization.h  glfw_platform.cpp  glfw_platform.h  image_cache.cpp  image_cache.h  main.cpp  map.cpp  map.hpp  map_generator.cpp  map_generator.hpp  noShadingFragment.glsl  platform_module.h  povray_platform.cpp  povray_platform.h  rendering.cpp  (+6 more)
docs/: map_generator.alg  map_generator.alg~
emscr/: Makefile  compile_shell.sh  shell.html
